<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:background="@color/colorPrimary">

    <RelativeLayout
        android:id="@+id/toolbarLayout"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@color/colorPrimary"
            android:scaleType="fitStart"
            android:src="@drawable/we_meet_logo" />

        <ImageView
            android:layout_marginTop="4dp"
            android:id="@+id/imageView"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:padding="8dp"
            android:src="@drawable/settings" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/menuLayout"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/profile_picture" />

        <TextView
            android:id="@+id/txvName"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-medium"
            android:gravity="bottom"
            android:text="@string/user_company"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <TextView
            android:layout_marginTop="5dp"
            android:id="@+id/txvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-medium"
            android:gravity="bottom"
            android:text="@string/user_role"
            android:textColor="@color/colorWhiteLight"
            android:textSize="13sp" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="12dp">

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/heart" />

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/boxes" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/menuLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/color_view_bg"
            android:paddingBottom="4dp"
            android:paddingEnd="4dp"
            android:paddingRight="4dp"
            android:paddingStart="4dp"
            android:paddingTop="4dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/nav_menu_close" />
        </FrameLayout>

        <TextView
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:background="@color/colorWhite"
            android:gravity="center"
            android:text="@string/menu" />


    </LinearLayout>

</RelativeLayout>
